--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -68,6 +68,12 @@
   margin-bottom: .3rem;
 }
 
+.blog-image {
+  max-height: 300px;
+  width: 100%;
+  margin-bottom: .3rem;
+}
+
 .widget-container.news-widget>.title {
   color: black;
   min-height: 125px;
