--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -117,3 +117,13 @@
   width: 100%;
   height: 100%;
 }
+
+.navlink-socmed {
+  color: whitesmoke !important;
+  transition: .5s;
+}
+
+.navlink-socmed:hover {
+  color: #655E7A !important;
+  transition: .5s;
+}
