--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,6 +9,8 @@
 /*=== MEDIA QUERY ===*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Volkhov:ital@1&display=swap");
 
+@import url(./app.css);
+
 body {
   line-height: 1.65;
   font-family: "Roboto", sans-serif;
@@ -735,7 +737,7 @@ header .navbar-default .navbar-nav li a:hover {
 }
 
 .navigation {
-  background: #ff8a1f;
+  /* background: var(--main-bg-color); */
   padding: 20px 0;
   /* color: whitesmoke; */
 }
@@ -825,8 +827,8 @@ header .navbar-default .navbar-nav li a:hover {
 
 .navigation .navbar .dropdown-menu a:focus,
 .navigation .navbar .dropdown-menu a:hover {
-  /* background: #655E7A; */
-  background-color: #ff8a1f;
+  background: #655E7A;
+  /* background-color: var(--main-bg-color); */
   color: #fff;
 }
 
@@ -873,8 +875,8 @@ header .navbar-default .navbar-nav li a:hover {
 
 .dropdown-submenu:hover>.dropdown-item,
 .dropdown-item:hover {
-  /* background: #655E7A; */
-  background-color: #ff8a1f;
+  background: #655E7A;
+  /* background-color: var(--main-bg-color); */
   color: #fff !important;
 }
 
@@ -1109,7 +1111,7 @@ ul.dropdown-menu li {
 }
 
 .feature {
-  background: url("../img/featue-bg.jpg");
+  background: url("../images/featue-bg.jpg");
   background-position: 50% 94px;
   display: block;
   position: relative;
