--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -178,6 +178,8 @@
 
 .collapse-sidepanel {
   bottom: 4rem;
+  z-index: 1;
+  left: -150px
 }
 
 .collapse-sidepanel.sidepanel-container {
@@ -202,7 +204,7 @@
   height: 65px;
   width: 200px;
   transition: .3s;
-  transform: translateX(-150px);
+  transform: translateX(0px);
   box-shadow: grey 3px 3px 10px 0;
 
 }
@@ -210,7 +212,7 @@
 .collapse-sidepanel .sidepanel-content:hover {
   width: 200px;
   transition: .3s;
-  transform: translateX(0px);
+  transform: translateX(150px);
 }
 
 .collapse-sidepanel .sidepanel-content span {
