--- a/src/components/admin/App.css
+++ b/src/components/admin/App.css
@@ -4,11 +4,15 @@
     align-items: stretch;
 }
 
+.App.wrapper {
+    background: #fafafa;
+}
+
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
 body {
     font-family: "Poppins", sans-serif;
-    background: #fafafa;
+    /* background: #fafafa; */
 }
 
 a,
