--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -45,6 +45,7 @@ a.nav-menus.dropdown-toggle::after {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+  gap: 2rem;
   border-radius: .5rem;
 }
 
