--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -925,7 +925,7 @@ ul.dropdown-menu li {
 }
 
 .slider {
-  background: url("../images/slider-bg.jpg") no-repeat;
+  /* background: url("../images/slider-bg.jpg") no-repeat; */
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
